[metadata]
name = wharfie
summary = Wharfie is a tool for building reproducable Docker images.
description-file = README.md
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[entry_points]
console_scripts =
    wharfie = wharfie.cmd.builder:main
